ingress_copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/log-format: '{"time": "$time_iso8601", "client_ip": "$remote_addr", "request_id": "$request_id", "status": "$status", "x_client_id": "$http_x_client_id"}'
    nginx.ingress.kubernetes.io/limit-rps: "0.0833" # translates to 5 requests per minute
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-rate-after: "0"
spec:
  rules:
  - host: 192.168.49.2.nip.io
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 8080
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
